# iota

./: .gitignore  Cargo.toml  README.md  deny.toml  pnpm-lock.yaml
.changeset/: config.json
crates/iota-proc-macros/: Cargo.toml
dapps/: README.md
dapps/BDNS-IOTA/: Move.toml  README.md
dapps/BDNS-IOTA/client-js/: main.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
dapps/BDNS-IOTA/sources/: iotaidtest.move
dapps/BDNS-IOTA/tests/: iotaidtest_tests.move
dapps/client-provider/: .gitignore  CtfLuckynumberIdl.ts  README.md  package-lock.json  package.json  tsconfig.json
dapps/client-provider/src/: CtfLuckynumberInterface.ts  client-provider.ts  parser.ts  tests.ts  types.ts
dapps/swapfee/: README.md
dapps/swapfee/src/: App.tsx  index.tsx  (+1 more)
hackaton2024/iotapad/: .gitignore  Main.py  Move.toml  Readme.md
iota/: Cargo.toml
iota-bridge/move/: deployed_objects.json  package.json
iota-bridge/server/: package.json  tsconfig.json
iota_bridge/: README.md
move/: Move.toml  deployed_objects.json  package-lock.json
move/sources/: bridge.move  wETH.move
move/tests/: bridge_tests.move
movechain/: Move.toml  README.md
movechain/sources/: movechain.move
server/: README.md  package-lock.json  pnpm-lock.yaml
server/src/: app.ts  burnWETH.ts  burnWIOTA.ts  lockETH.ts  lockIOTA.ts
solidity/: hardhat.config.ts  package-lock.json
solidity/cache/: .hardhat-network-instances.json  solidity-files-cache.json
solidity/contracts/: WIOTA.sol
solidity/specs/: Bridge.conf  Bridge.spec  README.md
solidity/typechain-types/: index.ts
(+68 files in other folders)
