[package]
name = "iota-proc-macros"
version = "0.7.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2.0", features = ["full", "fold", "extra-traits"] }

[target.'cfg(msim)'.dependencies]
msim-macros = { git = "ssh://git@github.com/miker83z/iota-sim.git", rev = "3dd57809982c58bcdf9764d8a44b05a0fa35c27f", package = "msim-macros" }
