[package]
name = "iota-proc-macros"
version = "0.7.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2.0", features = ["full", "fold", "extra-traits"] }

[target.'cfg(msim)'.dependencies]
msim-macros = { git = "ssh://git@github.com/temp-dlt-school-24-org/iota-sim.git", rev = "63b1d3e6eb232d1525af9c28bbd0344696748fe2", package = "msim-macros" }
